--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -896,12 +896,6 @@ table.custom-table tr td {
   overflow-y: auto;
 }
 
-@media screen and (min-width: 1367px) {
-  #investment-ready .custom-modal {
-    border-radius: 25px;
-  }
-}
-
 @media screen and (max-width: 575px) {
   #investment-ready .custom-modal {
     padding-top: calc(2.5rem + 74px);
@@ -981,6 +975,12 @@ table.custom-table tr td {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+@media screen and (min-width: 769px) {
+  #investment-ready .custom-modal .modal-body .form {
+    margin-bottom: 15vh;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -1125,6 +1125,22 @@ table.custom-table tr td {
   }
 }
 
+@media screen and (max-width: 768px) {
+  #details .custom-modal .last-child:not(.desktop),
+  #uploading .custom-modal .last-child:not(.desktop),
+  #uploader .custom-modal .last-child:not(.desktop) {
+    margin-bottom: 5rem !important;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  #details .custom-modal .last-child.desktop,
+  #uploading .custom-modal .last-child.desktop,
+  #uploader .custom-modal .last-child.desktop {
+    padding-bottom: 7rem !important;
+  }
+}
+
 #details .custom-modal .bottom-btn,
 #uploading .custom-modal .bottom-btn,
 #uploader .custom-modal .bottom-btn {
@@ -1157,7 +1173,7 @@ table.custom-table tr td {
   #details .custom-modal .close,
   #uploading .custom-modal .close,
   #uploader .custom-modal .close {
-    right: 2rem;
+    right: 1.25rem;
   }
 }
 
@@ -1205,38 +1221,16 @@ table.custom-table tr td {
   }
 }
 
-#details .custom-modal .continue,
-#uploading .custom-modal .continue,
-#uploader .custom-modal .continue {
-  position: absolute;
-  left: 50%;
-  bottom: 3rem;
-  width: 100%;
-  display: block;
-  max-width: 328px;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-}
-
-@media screen and (min-width: 992px) {
-  #details .custom-modal .continue,
-  #uploading .custom-modal .continue,
-  #uploader .custom-modal .continue {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 575px) {
-  #details .custom-modal .continue,
-  #uploading .custom-modal .continue,
-  #uploader .custom-modal .continue {
-    bottom: -3rem;
-  }
+#details .continue,
+#uploading .continue,
+#uploader .continue {
+  z-index: 7;
 }
 
 @media screen and (max-width: 991px) {
-  #uploading .uploading {
-    padding: 0 1rem;
+  #uploading .uploading,
+  #uploader .uploading {
+    padding: 0 0.5rem;
   }
 }
 
@@ -1284,13 +1278,13 @@ table.custom-table tr td {
 }
 
 #uploader .file-uploader {
-  padding: 0 2.5rem;
+  padding: 0 0.5rem;
   position: relative;
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (min-width: 992px) {
   #uploader .file-uploader {
-    padding: 0;
+    padding: 0 2.5rem;
   }
 }
 
@@ -1300,10 +1294,12 @@ table.custom-table tr td {
 
 #uploader .file-uploader label {
   display: block;
+  overflow: hidden;
   width: 100%;
   height: 132px;
   border: 1px dotted #ffc32c;
   background-color: transparent;
+  border-radius: 4px;
 }
 
 @media screen and (max-width: 768px) {
@@ -1324,6 +1320,12 @@ table.custom-table tr td {
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+@media screen and (min-width: 992px) {
+  #uploader .text-end.text-light-2 {
+    padding-right: 2.5rem !important;
+  }
 }
 
 @media screen and (max-width: 1366px) {
@@ -2051,6 +2053,12 @@ table.custom-table tr td {
   }
 }
 
+@media screen and (max-width: 575px) {
+  .transactions-sidenav-right {
+    padding-right: 1.5rem !important;
+  }
+}
+
 #transactions .title {
   position: relative;
   padding-bottom: 1.25rem;
@@ -2147,7 +2155,7 @@ table.custom-table tr td {
 
 @media screen and (max-width: 575px) {
   #transactions .transactions-body {
-    margin-left: -1.5rem;
+    margin-left: -1.75rem;
   }
 }
 
@@ -2335,7 +2343,7 @@ table.custom-table tr td {
   width: 48px;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 768px) {
   #transactions .transactions-body .transaction .details img {
     width: 32px;
   }
@@ -2363,7 +2371,7 @@ table.custom-table tr td {
   width: 100px;
   border-width: 0.5px;
   height: 32px;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 600;
 }
 
@@ -2401,14 +2409,20 @@ table.custom-table tr td {
   }
 }
 
-#transaction h2::after {
+#transaction h2.title::after {
   content: "";
-  bottom: -2rem;
-  left: -2rem;
+  left: 0;
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 1px;
   background-color: #e6e7e8;
+  bottom: -2rem;
+}
+
+@media screen and (max-width: 1366px) {
+  #transaction h2.title::after {
+    bottom: -1.5rem;
+  }
 }
 
 #transaction .transaction .transaction-head {
